fix: old blog super-link

--- a/content/posts/2024-09-03-go语言八股.md
+++ b/content/posts/2024-09-03-go语言八股.md
@@ -420,7 +420,7 @@ if chosen == 2 {
 3. 唤醒执行：此时协程被其中一个channel唤醒，循环出队其他的channel并释放对应的`sudog`，解锁channel，最后返回。
 
 ## GMP
-内容比较多，放在[另一篇](https://nos-ae.github.io/posts/go-GMP%E8%B0%83%E5%BA%A6%E5%99%A8/)
+内容比较多，放在[另一篇](https://nos-ae.github.io/posts/go-gmp%E8%B0%83%E5%BA%A6%E5%99%A8/)
 
 ## 参考链接🔗
 
