--- a/content/posts/2025-05-17-kafka源码阅读（4）-索引.md
+++ b/content/posts/2025-05-17-kafka源码阅读（4）-索引.md
@@ -154,7 +154,7 @@ protected def parseEntry(buffer: ByteBuffer, n: Int): IndexEntry
 
 ### 索引文件大小调整
 
-我们发现`AbastractIndex`还有一个比较长的`resize`方法，这个方法在[kafka源码阅读（2）](https://nos-ae.github.io/posts/kafka%E6%BA%90%E7%A0%81%E9%98%85%E8%AF%BB-2-%E6%97%A5%E5%BF%97%E5%8F%8A%E5%85%B6%E5%88%9D%E5%A7%8B%E5%8C%96/)中其实有涉及到，即在日志初始化时的加载日志段中会被调用，目的是将当前索引文件大小预分配到最大大小以便提高新增索引项时的效率。另外当日志段关闭的时候也会将索引用`resize`对齐到当前的索引项个数，以节省磁盘空间。下面看一下具体实现：
+我们发现`AbastractIndex`还有一个比较长的`resize`方法，这个方法在[kafka源码阅读（2）](https://nos-ae.github.io/posts/kafka%E6%BA%90%E7%A0%81%E9%98%85%E8%AF%BB2-%E6%97%A5%E5%BF%97%E5%8F%8A%E5%85%B6%E5%88%9D%E5%A7%8B%E5%8C%96/)中其实有涉及到，即在日志初始化时的加载日志段中会被调用，目的是将当前索引文件大小预分配到最大大小以便提高新增索引项时的效率。另外当日志段关闭的时候也会将索引用`resize`对齐到当前的索引项个数，以节省磁盘空间。下面看一下具体实现：
 
 ``` scala
 def resize(newSize: Int): Boolean = {
@@ -275,7 +275,7 @@ def fetchUpperBoundOffset(fetchOffset: OffsetPosition, fetchSize: Int): Option[O
 
 乍一看这俩方法不是差不多吗，为什么方法名差这么多？而且它们的返回值一个是`OffsetPosition`另一个却是`Option[OffsetPosition]`。原因是这两个方法在功能上定位不太一样：
 
-- lookup：一般是为了确定读取日志的起始位置（下界），比如在[kafka源码阅读（1）](https://nos-ae.github.io/posts/kafka%E6%BA%90%E7%A0%81%E9%98%85%E8%AF%BB-1-%E6%97%A5%E5%BF%97%E6%AE%B5%E7%9A%84%E8%AF%BB-%E5%86%99-%E6%81%A2%E5%A4%8D/)中提到，日志段的`read`方法调用的`translateOffset`方法时，其内部就使用了 lookup，如果没找到指定偏移量的 lower bound，有可能是该偏移量小于索引的基础偏移量，此时 lookup 直接返回这个基础偏移量，最终也可以。
+- lookup：一般是为了确定读取日志的起始位置（下界），比如在[kafka源码阅读（1）](https://nos-ae.github.io/posts/kafka%E6%BA%90%E7%A0%81%E9%98%85%E8%AF%BB1-%E6%97%A5%E5%BF%97%E6%AE%B5%E7%9A%84%E8%AF%BB%E5%86%99%E6%81%A2%E5%A4%8D/)中提到，日志段的`read`方法调用的`translateOffset`方法时，其内部就使用了 lookup，如果没找到指定偏移量的 lower bound，有可能是该偏移量小于索引的基础偏移量，此时 lookup 直接返回这个基础偏移量，最终也可以。
 - fetchUpperBoundOffset：一般是为了确定读取日志的上界，此时如果找不到上界的话，就不能像 lookup 那样返回一个默认值，需要告诉调用者找不到上界，避免调用者读取日志越界。
 
 ## 时间戳索引TimeIndex
