--- a/content/posts/2024-10-23-字节RPC框架kitex源码阅读（二）.md
+++ b/content/posts/2024-10-23-字节RPC框架kitex源码阅读（二）.md
@@ -9,7 +9,7 @@ categories: [源码阅读,kitex]
 
 ## 开篇
 
-在上篇[字节RPC框架kitex源码阅读（一）](https://nos-ae.github.io/posts/kitex%E6%BA%90%E7%A0%81%E9%98%85%E8%AF%BB%E4%B8%80/)中，简单过了一遍从创建服务、监听端口、建立连接&派发、退出清理的流程，对于代码生成的回调如何在kitex内部得到调用也有了初步的认知。
+在上篇[字节RPC框架kitex源码阅读（一）](https://nosae.top/posts/kitex%E6%BA%90%E7%A0%81%E9%98%85%E8%AF%BB%E4%B8%80/)中，简单过了一遍从创建服务、监听端口、建立连接&派发、退出清理的流程，对于代码生成的回调如何在kitex内部得到调用也有了初步的认知。
 
 这篇是（一）的续篇，深入分析`remote.Server`如何基于与客户端建立的连接做交互，包括传输、解码、编码等。
 
