--- a/content/posts/2025-04-20-kafka源码阅读（2）-日志及其初始化.md
+++ b/content/posts/2025-04-20-kafka源码阅读（2）-日志及其初始化.md
@@ -10,7 +10,7 @@ tags: [kafka,mq,源码]
 >
 > 如无特殊说明，文中代码片段将删除 debug 信息、异常触发、英文注释等代码，以便观看核心代码。
 
-本篇将基于[上一篇](https://nos-ae.github.io/posts/kafka%E6%BA%90%E7%A0%81%E9%98%85%E8%AF%BB1-%E6%97%A5%E5%BF%97%E6%AE%B5%E7%9A%84%E8%AF%BB%E5%86%99%E6%81%A2%E5%A4%8D/)介绍的日志段，进一步探索 kafka 中的日志，包括如何加载管理日志段等操作。如无特别修饰，文中所述的“文件夹”均代指本 Log 中文件夹。
+本篇将基于[上一篇](https://nosae.top/posts/kafka%E6%BA%90%E7%A0%81%E9%98%85%E8%AF%BB1-%E6%97%A5%E5%BF%97%E6%AE%B5%E7%9A%84%E8%AF%BB%E5%86%99%E6%81%A2%E5%A4%8D/)介绍的日志段，进一步探索 kafka 中的日志，包括如何加载管理日志段等操作。如无特别修饰，文中所述的“文件夹”均代指本 Log 中文件夹。
 
 ## 日志 Log
 
